--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,4 +10,29 @@
  *
  *= require_self
  *= require_tree .
+ *= require bootstrap_and_overrides  
+ *= require font-awesome
  */
+ 
+
+body{
+  padding: 20px;
+  background-color: #efefef;
+} 
+
+.author{ 
+    background-color: #f2f2f2;
+    padding: 15px; 
+    margin-bottom: 10px
+}
+.alert{
+  color: red;
+  border: 1px solid red;
+  padding: 10px;
+}
+
+.notice{
+  color: green;
+  border: 1px solid green;
+  padding: 10px;
+}
